--- a/pages/detalles.html
+++ b/pages/detalles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KantutaMarket - Inicio</title>
+    <title>KantutaMarket - Detalles del Producto</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,17 +18,14 @@
         </nav>
     </header>
 
-    <section class="destacados">
-        <!-- Aquí se mostrarían los productos destacados -->
-    </section>
-
-    <section class="categorias">
-        <!-- Aquí se listarían las categorías de productos -->
-    </section>
+    <main>
+        <section class="detalle-producto">
+            <!-- Detalles del producto -->
+        </section>
+    </main>
 
     <footer>
         <!-- Pie de página con información adicional y enlaces útiles -->
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
