--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -11,18 +11,20 @@
     <div class="card">
       <h1 class="title">KantutaMarket</h1>
       <h2 class="subtitle">Iniciar sesión con correo</h2>
-      <form action="#">
+      <form id="login-form">
         <div class="input-group">
-          <input type="email" placeholder="Correo electrónico" required
-                 class="input">
+          <input id="email" type="email" placeholder="Correo electrónico" required class="input">
+        </div>
+        <div class="input-group">
+          <input id="password" type="password" placeholder="Contraseña" required class="input">
         </div>
         <div class="input-group">
           <button type="submit" class="button">CONTINUAR</button>
         </div>
-        <p class="text">¿Primera vez en KantutaMarket? <a href="#" class="link">Suscribirme</a></p>
+        <p class="text">¿Primera vez en KantutaMarket? <a href="registro.html" class="link">Suscribirme</a></p>
       </form>
     </div>
   </div>
-  <script src="/js/inicio.js"></script>
+  <script src="inicio.js"></script>
 </body>
 </html>
