--- a/index.html
+++ b/index.html
@@ -1,29 +1,191 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KantutaMarket - Inicio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>KantutaMarket</h1>
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="#">Productos</a></li>
                 <li><a href="#">Carrito</a></li>
             </ul>
         </nav>
+
     </header>
+    <br>
+    <aside>
+        <div class="contenedor-categorias">
+            <div class="categoria">
+                <img class="imagen_categoria" src="/imagen/electronics.png" alt="Electrónica" width="1em">
+                <h2>Electrónica</h2>
+            </div>
+            <div class="categoria">
+                <img class="imagen_categoria" src="clothing.jpg" alt="Ropa y Accesorios">
+                <h2>Ropa y Accesorios</h2>
+            </div>
+            <div class="categoria">
+                <img class="imagen_categoria" src="home.jpg" alt="Hogar y Cocina">
+                <h2>Hogar y Cocina</h2>
+            </div>
+            <div class="categoria">
+                <img class="imagen_categoria" src="electronics.jpg" alt="Calzados">
+                <h2>Calzados</h2>
+            </div>
+            <div class="categoria">
+                <img class="imagen_categoria" src="clothing.jpg" alt="Repuestos">
+                <h2>Repuestos</h2>
+            </div>
+            <div class="categoria">
+                <img class="imagen_categoria" src="home.jpg" alt="Cosméticos">
+                <h2>Cosméticos</h2>
+            </div>
+        </div>
+    </aside>
+    <section class="contenedor-productos">
+        <!-- Producto 1 -->
+        <div class="producto">
+            <img src="imagen1.jpg" alt="Producto 1">
+            <h2>Producto 1</h2>
+            <p>Descripción del producto 1.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto1.html">Ver detalles</a>
+        </div>
+
+        <!-- Producto 2 -->
+        <div class="producto">
+            <img src="imagen2.jpg" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p>Descripción del producto 2.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto2.html">Ver detalles</a>
+        </div>
+
+        <div class="producto">
+            <img src="imagen2.jpg" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p>Descripción del producto 2.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto2.html">Ver detalles</a>
+        </div>
+
+        <div class="producto">
+            <img src="imagen2.jpg" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p>Descripción del producto 2.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto2.html">Ver detalles</a>
+        </div>
+
+        <div class="producto">
+            <img src="imagen1.jpg" alt="Producto 1">
+            <h2>Producto 1</h2>
+            <p>Descripción del producto 1.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto1.html">Ver detalles</a>
+        </div>
+
+        <!-- Producto 2 -->
+        <div class="producto">
+            <img src="imagen2.jpg" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p>Descripción del producto 2.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto2.html">Ver detalles</a>
+        </div>
+
+        <div class="producto">
+            <img src="imagen2.jpg" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p>Descripción del producto 2.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto2.html">Ver detalles</a>
+        </div>
+
+        <div class="producto">
+            <img src="imagen2.jpg" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p>Descripción del producto 2.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto2.html">Ver detalles</a>
+        </div>
+
+        <div class="producto">
+            <img src="imagen1.jpg" alt="Producto 1">
+            <h2>Producto 1</h2>
+            <p>Descripción del producto 1.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto1.html">Ver detalles</a>
+        </div>
+
+        <!-- Producto 2 -->
+        <div class="producto">
+            <img src="imagen2.jpg" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p>Descripción del producto 2.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto2.html">Ver detalles</a>
+        </div>
+
+        <div class="producto">
+            <img src="imagen2.jpg" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p>Descripción del producto 2.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto2.html">Ver detalles</a>
+        </div>
+
+        <div class="producto">
+            <img src="imagen2.jpg" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p>Descripción del producto 2.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto2.html">Ver detalles</a>
+        </div>
+
+        <div class="producto">
+            <img src="imagen1.jpg" alt="Producto 1">
+            <h2>Producto 1</h2>
+            <p>Descripción del producto 1.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto1.html">Ver detalles</a>
+        </div>
+
+        <!-- Producto 2 -->
+        <div class="producto">
+            <img src="imagen2.jpg" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p>Descripción del producto 2.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto2.html">Ver detalles</a>
+        </div>
+
+        <div class="producto">
+            <img src="imagen2.jpg" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p>Descripción del producto 2.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto2.html">Ver detalles</a>
+        </div>
+
+        <div class="producto">
+            <img src="imagen2.jpg" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p>Descripción del producto 2.</p>
+            <p>Precio: $XX.XX</p>
+            <a href="detalles_producto2.html">Ver detalles</a>
+        </div>
+    </section>
 
     <section class="destacados">
         <!-- Aquí se mostrarían los productos destacados -->
-    </section>
-
-    <section class="categorias">
-        <!-- Aquí se listarían las categorías de productos -->
     </section>
 
     <footer>
@@ -31,4 +193,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
