--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="producto">
-            <img src="imagen1.jpg" alt="Remera">
+            <img src="/imagen/remera4.jpg" alt="Remera">
             <h2>Remera Negra Unisex</h2>
             <p>Remera negra para hombre y mujer.</p>
             <p>Precio: $30.00</p>
@@ -98,7 +98,7 @@
 
         
         <div class="producto">
-            <img src="imagen2.jpg" alt="Sobretodo">
+            <img src="/imagen/sobretodo1.jpg" alt="Sobretodo">
             <h2>Sobretodo Hombre</h2>
             <p>Sobretodo para hombre en gris negro y azul marino.</p>
             <p>Precio: $200.00</p>
@@ -106,43 +106,43 @@
         </div>
 
         <div class="producto">
-            <img src="imagen2.jpg" alt="Producto 2">
-            <h2>Producto 2</h2>
-            <p>Descripción del producto 2.</p>
-            <p>Precio: $XX.XX</p>
+            <img src="/imagen/zapatoysl1.webp" alt="Zapato">
+            <h2>Zapato YSL</h2>
+            <p>Zapato Dama YSL.</p>
+            <p>Precio: $500.00</p>
             <a href="detalles_producto2.html">Ver detalles</a>
         </div>
 
         <div class="producto">
-            <img src="imagen2.jpg" alt="Producto 2">
-            <h2>Producto 2</h2>
-            <p>Descripción del producto 2.</p>
-            <p>Precio: $XX.XX</p>
+            <img src="/imagen/zapatover1.webp" alt="zapatoversage">
+            <h2>Zapato Versage</h2>
+            <p>Zapatos Dama Versage Edición Limitada.</p>
+            <p>Precio: $600.00</p>
             <a href="detalles_producto2.html">Ver detalles</a>
         </div>
 
         <div class="producto">
-            <img src="imagen1.jpg" alt="Producto 1">
-            <h2>Producto 1</h2>
-            <p>Descripción del producto 1.</p>
-            <p>Precio: $XX.XX</p>
+            <img src="/imagen/zapatocannes1.webp" alt="Zapato">
+            <h2>Zapato Hombre Cannes</h2>
+            <p>Zapato para Hombre.</p>
+            <p>Precio: $250.00</p>
             <a href="detalles_producto1.html">Ver detalles</a>
         </div>
 
         
         <div class="producto">
-            <img src="imagen2.jpg" alt="Producto 2">
-            <h2>Producto 2</h2>
-            <p>Descripción del producto 2.</p>
-            <p>Precio: $XX.XX</p>
+            <img src="/imagen/zapatolv1.webp" alt="Zapato">
+            <h2>Zapatilla Louis Vuiton</h2>
+            <p>Zapatilla Hombre Louis Vuiton.</p>
+            <p>Precio: $900.00</p>
             <a href="detalles_producto2.html">Ver detalles</a>
         </div>
 
         <div class="producto">
-            <img src="imagen2.jpg" alt="Producto 2">
-            <h2>Producto 2</h2>
-            <p>Descripción del producto 2.</p>
-            <p>Precio: $XX.XX</p>
+            <img src="/imagen/repuestos.jpg" alt="Repuestos">
+            <h2>Tapa Motor</h2>
+            <p>Tapa Motor Perkins 6.</p>
+            <p>Precio: $950.00</p>
             <a href="detalles_producto2.html">Ver detalles</a>
         </div>
 
