--- a/index.html
+++ b/index.html
@@ -147,54 +147,80 @@
         </div>
 
         <div class="producto">
-            <img src="imagen2.jpg" alt="Producto 2">
-            <h2>Producto 2</h2>
-            <p>Descripción del producto 2.</p>
-            <p>Precio: $XX.XX</p>
+            <img src="/imagen/cocina.jpg" alt="cocina">
+            <h2>Cocina a leña</h2>
+            <p>DescripciónCocina a leña con horno totalmente de metal.</p>
+            <p>Precio: $1200.00XX</p>
             <a href="detalles_producto2.html">Ver detalles</a>
         </div>
 
         <div class="producto">
-            <img src="imagen1.jpg" alt="Producto 1">
-            <h2>Producto 1</h2>
-            <p>Descripción del producto 1.</p>
-            <p>Precio: $XX.XX</p>
+            <img src="/imagen/mesada1.webp" alt="Mesada">
+            <h2>Mesada en "L"</h2>
+            <p>Mesada y bajo mesada con bacha, cajones y estantes.</p>
+            <p>Precio: $1500.00</p>
             <a href="detalles_producto1.html">Ver detalles</a>
         </div>
 
         
         <div class="producto">
-            <img src="imagen2.jpg" alt="Producto 2">
-            <h2>Producto 2</h2>
-            <p>Descripción del producto 2.</p>
-            <p>Precio: $XX.XX</p>
+            <img src="/imagen/desayunador1.webp" alt="Desayunador">
+            <h2>Desayunador</h2>
+            <p>Desayunador estilo industrial de metal y madera.</p>
+            <p>Precio: $900.00</p>
             <a href="detalles_producto2.html">Ver detalles</a>
         </div>
 
         <div class="producto">
-            <img src="imagen2.jpg" alt="Producto 2">
+            <img src="/imagen/kitparche.webp" alt="Kit">
             <h2>Producto 2</h2>
-            <p>Descripción del producto 2.</p>
-            <p>Precio: $XX.XX</p>
+            <p>DescripciónKit de reparación de rueda.</p>
+            <p>Precio: $3.10</p>
             <a href="detalles_producto2.html">Ver detalles</a>
         </div>
 
         <div class="producto">
-            <img src="imagen2.jpg" alt="Producto 2">
-            <h2>Producto 2</h2>
-            <p>Descripción del producto 2.</p>
-            <p>Precio: $XX.XX</p>
+            <img src="/imagen/auricular3.jpg" alt="Auricular">
+            <h2>Auricular SONY negro</h2>
+            <p>Auricular Sony color negro.</p>
+            <p>Precio: $90.00XX</p>
             <a href="detalles_producto2.html">Ver detalles</a>
         </div>
     </section>
 
-    <section class="destacados">
-        <!-- Aquí se mostrarían los productos destacados -->
-    </section>
-
-    <footer>
-        <!-- Pie de página con información adicional y enlaces útiles -->
-    </footer>
+    <footer class="footer">
+        <div class="container">
+          <div class="container-iconos">
+            <figure><a href="#"><img src="/imagen/icon-faceboock.svg" alt="icono icon-faceboock"></a></figure>
+            <figure><a href="#"><img src="/imagen/icon-zorro.svg" alt="icono icon-zorro"></a></figure>
+            <figure><a href="#"><img src="/imagen/icon-github.svg" alt="icono icon-github"></a></figure>
+            <figure><a href="#"><img src="/imagen/icon-telegram.svg" alt="icono icon-telegram"></a></figure>
+            <figure><a href="#"><img src="/imagen/icon-instagram.svg" alt="icono icon-instagram"></a></figure>
+            <figure><a href="#"><img src="/imagen/icon-figma.svg" alt="icono icon-figma"></a></figure>
+          </div>
+          <div class="container-nav-button">
+            <div class="container-nav">
+              <nav>
+                <ul>
+                  <li><a href="#">Acerca</a></li>
+                  <li><a href="#">Nosotros</a></li>
+                  <li><a href="#">Precios</a></li>
+                  <li><a href="#">Galleria</a></li>
+                  <li><a href="#">Equipo</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="container-button">
+              <button class="button"><a href="#">Contactanos</a></button>
+            </div>
+          </div>
+          <div class="linia-divisoria"></div>
+          <div class="container-reserved">
+            <p>© 2021 All Rights Reserved</p>
+          </div>
+        </div>
+      </footer>
+      
     <script src="script.js"></script>
 </body>
 
